integrate with mohsen code

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -4,7 +4,7 @@
 Mode = Real;Simulation;
 [Team]
 Color = Blue;Yellow;
-Side = Right;Left;
+Side = Left;Right;
 
 [Transmitter]
 SerialPort = /dev/ttyUSB0
